src/spina/spinaParser.java
// $ANTLR 3.1.3 Mar 18, 2009 10:09:25 spina.g 2009-10-26 12:25:49

package spina;

import java.util.Vector;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;


import org.antlr.runtime.tree.*;

public class spinaParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "EQUAL", "END_OF_STATEMENT", "PLUS", "MULTIPLY", "VARIABLE", "INTEGER", "SQU_BRACKET_LEFT", "ROU_BRACKET_LEFT", "COMMA", "ROU_BRACKET_RIGHT", "SQU_BRACKET_RIGHT", "PARALLEL_FOR", "TO", "CUR_BRACKET_LEFT", "CUR_BRACKET_RIGHT", "PRINT", "ANG_BRACKET_LEFT", "ANG_BRACKET_RIGHT", "WHITESPACE"
    };
    public static final int INTEGER=9;
    public static final int PARALLEL_FOR=15;
    public static final int TO=16;
    public static final int WHITESPACE=22;
    public static final int ANG_BRACKET_LEFT=20;
    public static final int EOF=-1;
    public static final int PRINT=19;
    public static final int CUR_BRACKET_LEFT=17;
    public static final int ROU_BRACKET_LEFT=11;
    public static final int VARIABLE=8;
    public static final int MULTIPLY=7;
    public static final int COMMA=12;
    public static final int EQUAL=4;
    public static final int PLUS=6;
    public static final int ROU_BRACKET_RIGHT=13;
    public static final int CUR_BRACKET_RIGHT=18;
    public static final int ANG_BRACKET_RIGHT=21;
    public static final int SQU_BRACKET_LEFT=10;
    public static final int SQU_BRACKET_RIGHT=14;
    public static final int END_OF_STATEMENT=5;

    // delegates
    // delegators


        public spinaParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public spinaParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        
    protected TreeAdaptor adaptor = new CommonTreeAdaptor();

    public void setTreeAdaptor(TreeAdaptor adaptor) {
        this.adaptor = adaptor;
    }
    public TreeAdaptor getTreeAdaptor() {
        return adaptor;
    }

    public String[] getTokenNames() { return spinaParser.tokenNames; }
    public String getGrammarFileName() { return "spina.g"; }


    public static class program_return extends ParserRuleReturnScope {
        public Vector<Element> ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "program"
    // spina.g:27:1: program returns [Vector<Element> ret] : ( expr )+ ;
    public final spinaParser.program_return program() throws RecognitionException {
        spinaParser.program_return retval = new spinaParser.program_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        spinaParser.expr_return expr1 = null;




          retval.ret = new Vector<Element>();

        try {
            // spina.g:31:3: ( ( expr )+ )
            // spina.g:31:5: ( expr )+
            {
            root_0 = (Object)adaptor.nil();

            // spina.g:31:5: ( expr )+
            int cnt1=0;
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==VARIABLE||LA1_0==PARALLEL_FOR||LA1_0==PRINT) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // spina.g:31:6: expr
            	    {
            	    pushFollow(FOLLOW_expr_in_program61);
            	    expr1=expr();

            	    state._fsp--;

            	    adaptor.addChild(root_0, expr1.getTree());
            	    retval.ret.add((expr1!=null?expr1.ret:null)); 

            	    }
            	    break;

            	default :
            	    if ( cnt1 >= 1 ) break loop1;
                        EarlyExitException eee =
                            new EarlyExitException(1, input);
                        throw eee;
                }
                cnt1++;
            } while (true);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "program"

    public static class expr_return extends ParserRuleReturnScope {
        public Element ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "expr"
    // spina.g:33:1: expr returns [Element ret] : ( assignment | print | parallel_for );
    public final spinaParser.expr_return expr() throws RecognitionException {
        spinaParser.expr_return retval = new spinaParser.expr_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        spinaParser.assignment_return assignment2 = null;

        spinaParser.print_return print3 = null;

        spinaParser.parallel_for_return parallel_for4 = null;



        try {
            // spina.g:34:3: ( assignment | print | parallel_for )
            int alt2=3;
            switch ( input.LA(1) ) {
            case VARIABLE:
                {
                alt2=1;
                }
                break;
            case PRINT:
                {
                alt2=2;
                }
                break;
            case PARALLEL_FOR:
                {
                alt2=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 2, 0, input);

                throw nvae;
            }

            switch (alt2) {
                case 1 :
                    // spina.g:34:5: assignment
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_assignment_in_expr80);
                    assignment2=assignment();

                    state._fsp--;

                    adaptor.addChild(root_0, assignment2.getTree());
                    retval.ret = (assignment2!=null?assignment2.ret:null);

                    }
                    break;
                case 2 :
                    // spina.g:35:5: print
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_print_in_expr88);
                    print3=print();

                    state._fsp--;

                    adaptor.addChild(root_0, print3.getTree());
                     retval.ret = (print3!=null?print3.ret:null); 

                    }
                    break;
                case 3 :
                    // spina.g:36:5: parallel_for
                    {
                    root_0 = (Object)adaptor.nil();

                    pushFollow(FOLLOW_parallel_for_in_expr96);
                    parallel_for4=parallel_for();

                    state._fsp--;

                    adaptor.addChild(root_0, parallel_for4.getTree());
                     retval.ret = (parallel_for4!=null?parallel_for4.ret:null); 

                    }
                    break;

            }
            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "expr"

    public static class assignment_return extends ParserRuleReturnScope {
        public AssignmentOperationElement ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "assignment"
    // spina.g:38:1: assignment returns [AssignmentOperationElement ret] : ( variable | indexer ) EQUAL ( literal | addition | multiplication ) END_OF_STATEMENT ;
    public final spinaParser.assignment_return assignment() throws RecognitionException {
        spinaParser.assignment_return retval = new spinaParser.assignment_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token EQUAL7=null;
        Token END_OF_STATEMENT11=null;
        spinaParser.variable_return variable5 = null;

        spinaParser.indexer_return indexer6 = null;

        spinaParser.literal_return literal8 = null;

        spinaParser.addition_return addition9 = null;

        spinaParser.multiplication_return multiplication10 = null;


        Object EQUAL7_tree=null;
        Object END_OF_STATEMENT11_tree=null;


          retval.ret = new AssignmentOperationElement();

        try {
            // spina.g:42:3: ( ( variable | indexer ) EQUAL ( literal | addition | multiplication ) END_OF_STATEMENT )
            // spina.g:42:5: ( variable | indexer ) EQUAL ( literal | addition | multiplication ) END_OF_STATEMENT
            {
            root_0 = (Object)adaptor.nil();

            // spina.g:42:5: ( variable | indexer )
            int alt3=2;
            int LA3_0 = input.LA(1);

            if ( (LA3_0==VARIABLE) ) {
                int LA3_1 = input.LA(2);

                if ( (LA3_1==ANG_BRACKET_LEFT) ) {
                    alt3=2;
                }
                else if ( (LA3_1==EQUAL) ) {
                    alt3=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 3, 1, input);

                    throw nvae;
                }
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 3, 0, input);

                throw nvae;
            }
            switch (alt3) {
                case 1 :
                    // spina.g:42:6: variable
                    {
                    pushFollow(FOLLOW_variable_in_assignment118);
                    variable5=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, variable5.getTree());
                    retval.ret.setLhs((variable5!=null?variable5.ret:null)); 

                    }
                    break;
                case 2 :
                    // spina.g:43:7: indexer
                    {
                    pushFollow(FOLLOW_indexer_in_assignment128);
                    indexer6=indexer();

                    state._fsp--;

                    adaptor.addChild(root_0, indexer6.getTree());
                    retval.ret.setLhs((indexer6!=null?indexer6.ret:null)); 

                    }
                    break;

            }

            EQUAL7=(Token)match(input,EQUAL,FOLLOW_EQUAL_in_assignment137); 
            EQUAL7_tree = (Object)adaptor.create(EQUAL7);
            adaptor.addChild(root_0, EQUAL7_tree);

            // spina.g:45:5: ( literal | addition | multiplication )
            int alt4=3;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // spina.g:45:6: literal
                    {
                    pushFollow(FOLLOW_literal_in_assignment144);
                    literal8=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, literal8.getTree());
                    retval.ret.setRhs((literal8!=null?literal8.ret:null)); 

                    }
                    break;
                case 2 :
                    // spina.g:46:7: addition
                    {
                    pushFollow(FOLLOW_addition_in_assignment154);
                    addition9=addition();

                    state._fsp--;

                    adaptor.addChild(root_0, addition9.getTree());
                    retval.ret.setRhs((addition9!=null?addition9.ret:null)); 

                    }
                    break;
                case 3 :
                    // spina.g:47:7: multiplication
                    {
                    pushFollow(FOLLOW_multiplication_in_assignment164);
                    multiplication10=multiplication();

                    state._fsp--;

                    adaptor.addChild(root_0, multiplication10.getTree());
                    retval.ret.setRhs((multiplication10!=null?multiplication10.ret:null)); 

                    }
                    break;

            }

            END_OF_STATEMENT11=(Token)match(input,END_OF_STATEMENT,FOLLOW_END_OF_STATEMENT_in_assignment178); 
            END_OF_STATEMENT11_tree = (Object)adaptor.create(END_OF_STATEMENT11);
            adaptor.addChild(root_0, END_OF_STATEMENT11_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "assignment"

    public static class addition_return extends ParserRuleReturnScope {
        public AdditionOperationElement ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "addition"
    // spina.g:51:1: addition returns [AdditionOperationElement ret] : (var1= variable | ind1= indexer | lit1= literal ) PLUS (var2= variable | ind2= indexer | lit2= literal ) ;
    public final spinaParser.addition_return addition() throws RecognitionException {
        spinaParser.addition_return retval = new spinaParser.addition_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token PLUS12=null;
        spinaParser.variable_return var1 = null;

        spinaParser.indexer_return ind1 = null;

        spinaParser.literal_return lit1 = null;

        spinaParser.variable_return var2 = null;

        spinaParser.indexer_return ind2 = null;

        spinaParser.literal_return lit2 = null;


        Object PLUS12_tree=null;


          retval.ret = new AdditionOperationElement();

        try {
            // spina.g:55:3: ( (var1= variable | ind1= indexer | lit1= literal ) PLUS (var2= variable | ind2= indexer | lit2= literal ) )
            // spina.g:55:5: (var1= variable | ind1= indexer | lit1= literal ) PLUS (var2= variable | ind2= indexer | lit2= literal )
            {
            root_0 = (Object)adaptor.nil();

            // spina.g:55:5: (var1= variable | ind1= indexer | lit1= literal )
            int alt5=3;
            int LA5_0 = input.LA(1);

            if ( (LA5_0==VARIABLE) ) {
                int LA5_1 = input.LA(2);

                if ( (LA5_1==ANG_BRACKET_LEFT) ) {
                    alt5=2;
                }
                else if ( (LA5_1==PLUS) ) {
                    alt5=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 5, 1, input);

                    throw nvae;
                }
            }
            else if ( ((LA5_0>=INTEGER && LA5_0<=SQU_BRACKET_LEFT)) ) {
                alt5=3;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // spina.g:55:6: var1= variable
                    {
                    pushFollow(FOLLOW_variable_in_addition200);
                    var1=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, var1.getTree());
                     retval.ret.setLhs((var1!=null?var1.ret:null)); 

                    }
                    break;
                case 2 :
                    // spina.g:56:7: ind1= indexer
                    {
                    pushFollow(FOLLOW_indexer_in_addition212);
                    ind1=indexer();

                    state._fsp--;

                    adaptor.addChild(root_0, ind1.getTree());
                     retval.ret.setLhs((ind1!=null?ind1.ret:null)); 

                    }
                    break;
                case 3 :
                    // spina.g:57:7: lit1= literal
                    {
                    pushFollow(FOLLOW_literal_in_addition224);
                    lit1=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, lit1.getTree());
                     retval.ret.setLhs((lit1!=null?lit1.ret:null)); 

                    }
                    break;

            }

            PLUS12=(Token)match(input,PLUS,FOLLOW_PLUS_in_addition233); 
            PLUS12_tree = (Object)adaptor.create(PLUS12);
            adaptor.addChild(root_0, PLUS12_tree);

            // spina.g:59:5: (var2= variable | ind2= indexer | lit2= literal )
            int alt6=3;
            int LA6_0 = input.LA(1);

            if ( (LA6_0==VARIABLE) ) {
                int LA6_1 = input.LA(2);

                if ( (LA6_1==ANG_BRACKET_LEFT) ) {
                    alt6=2;
                }
                else if ( (LA6_1==END_OF_STATEMENT) ) {
                    alt6=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 6, 1, input);

                    throw nvae;
                }
            }
            else if ( ((LA6_0>=INTEGER && LA6_0<=SQU_BRACKET_LEFT)) ) {
                alt6=3;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }
            switch (alt6) {
                case 1 :
                    // spina.g:59:6: var2= variable
                    {
                    pushFollow(FOLLOW_variable_in_addition242);
                    var2=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, var2.getTree());
                     retval.ret.setRhs((var2!=null?var2.ret:null)); 

                    }
                    break;
                case 2 :
                    // spina.g:60:7: ind2= indexer
                    {
                    pushFollow(FOLLOW_indexer_in_addition254);
                    ind2=indexer();

                    state._fsp--;

                    adaptor.addChild(root_0, ind2.getTree());
                     retval.ret.setRhs((ind2!=null?ind2.ret:null)); 

                    }
                    break;
                case 3 :
                    // spina.g:61:7: lit2= literal
                    {
                    pushFollow(FOLLOW_literal_in_addition266);
                    lit2=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, lit2.getTree());
                     retval.ret.setRhs((lit2!=null?lit2.ret:null)); 

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "addition"

    public static class multiplication_return extends ParserRuleReturnScope {
        public MultiplicationOperationElement ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "multiplication"
    // spina.g:63:1: multiplication returns [MultiplicationOperationElement ret] : (var1= variable | ind1= indexer | lit1= literal ) MULTIPLY (var2= variable | ind2= indexer | lit2= literal ) ;
    public final spinaParser.multiplication_return multiplication() throws RecognitionException {
        spinaParser.multiplication_return retval = new spinaParser.multiplication_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token MULTIPLY13=null;
        spinaParser.variable_return var1 = null;

        spinaParser.indexer_return ind1 = null;

        spinaParser.literal_return lit1 = null;

        spinaParser.variable_return var2 = null;

        spinaParser.indexer_return ind2 = null;

        spinaParser.literal_return lit2 = null;


        Object MULTIPLY13_tree=null;


          retval.ret = new MultiplicationOperationElement();

        try {
            // spina.g:67:3: ( (var1= variable | ind1= indexer | lit1= literal ) MULTIPLY (var2= variable | ind2= indexer | lit2= literal ) )
            // spina.g:67:5: (var1= variable | ind1= indexer | lit1= literal ) MULTIPLY (var2= variable | ind2= indexer | lit2= literal )
            {
            root_0 = (Object)adaptor.nil();

            // spina.g:67:5: (var1= variable | ind1= indexer | lit1= literal )
            int alt7=3;
            int LA7_0 = input.LA(1);

            if ( (LA7_0==VARIABLE) ) {
                int LA7_1 = input.LA(2);

                if ( (LA7_1==ANG_BRACKET_LEFT) ) {
                    alt7=2;
                }
                else if ( (LA7_1==MULTIPLY) ) {
                    alt7=1;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 7, 1, input);

                    throw nvae;
                }
            }
            else if ( ((LA7_0>=INTEGER && LA7_0<=SQU_BRACKET_LEFT)) ) {
                alt7=3;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 7, 0, input);

                throw nvae;
            }
            switch (alt7) {
                case 1 :
                    // spina.g:67:6: var1= variable
                    {
                    pushFollow(FOLLOW_variable_in_multiplication291);
                    var1=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, var1.getTree());
                     retval.ret.setLhs((var1!=null?var1.ret:null)); 

                    }
                    break;
                case 2 :
                    // spina.g:68:7: ind1= indexer
                    {
                    pushFollow(FOLLOW_indexer_in_multiplication303);
                    ind1=indexer();

                    state._fsp--;

                    adaptor.addChild(root_0, ind1.getTree());
                     retval.ret.setLhs((ind1!=null?ind1.ret:null)); 

                    }
                    break;
                case 3 :
                    // spina.g:69:7: lit1= literal
                    {
                    pushFollow(FOLLOW_literal_in_multiplication315);
                    lit1=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, lit1.getTree());
                     retval.ret.setLhs((lit1!=null?lit1.ret:null)); 

                    }
                    break;

            }

            MULTIPLY13=(Token)match(input,MULTIPLY,FOLLOW_MULTIPLY_in_multiplication324); 
            MULTIPLY13_tree = (Object)adaptor.create(MULTIPLY13);
            adaptor.addChild(root_0, MULTIPLY13_tree);

            // spina.g:71:5: (var2= variable | ind2= indexer | lit2= literal )
            int alt8=3;
            int LA8_0 = input.LA(1);

            if ( (LA8_0==VARIABLE) ) {
                int LA8_1 = input.LA(2);

                if ( (LA8_1==END_OF_STATEMENT) ) {
                    alt8=1;
                }
                else if ( (LA8_1==ANG_BRACKET_LEFT) ) {
                    alt8=2;
                }
                else {
                    NoViableAltException nvae =
                        new NoViableAltException("", 8, 1, input);

                    throw nvae;
                }
            }
            else if ( ((LA8_0>=INTEGER && LA8_0<=SQU_BRACKET_LEFT)) ) {
                alt8=3;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 8, 0, input);

                throw nvae;
            }
            switch (alt8) {
                case 1 :
                    // spina.g:71:6: var2= variable
                    {
                    pushFollow(FOLLOW_variable_in_multiplication333);
                    var2=variable();

                    state._fsp--;

                    adaptor.addChild(root_0, var2.getTree());
                     retval.ret.setRhs((var2!=null?var2.ret:null)); 

                    }
                    break;
                case 2 :
                    // spina.g:72:7: ind2= indexer
                    {
                    pushFollow(FOLLOW_indexer_in_multiplication345);
                    ind2=indexer();

                    state._fsp--;

                    adaptor.addChild(root_0, ind2.getTree());
                     retval.ret.setRhs((ind2!=null?ind2.ret:null)); 

                    }
                    break;
                case 3 :
                    // spina.g:73:7: lit2= literal
                    {
                    pushFollow(FOLLOW_literal_in_multiplication357);
                    lit2=literal();

                    state._fsp--;

                    adaptor.addChild(root_0, lit2.getTree());
                     retval.ret.setRhs((lit2!=null?lit2.ret:null)); 

                    }
                    break;

            }


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "multiplication"

    public static class variable_return extends ParserRuleReturnScope {
        public VariableElement ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "variable"
    // spina.g:75:1: variable returns [VariableElement ret] : VARIABLE ;
    public final spinaParser.variable_return variable() throws RecognitionException {
        spinaParser.variable_return retval = new spinaParser.variable_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token VARIABLE14=null;

        Object VARIABLE14_tree=null;


          retval.ret = new VariableElement();

        try {
            // spina.g:79:3: ( VARIABLE )
            // spina.g:79:5: VARIABLE
            {
            root_0 = (Object)adaptor.nil();

            VARIABLE14=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_variable379); 
            VARIABLE14_tree = (Object)adaptor.create(VARIABLE14);
            adaptor.addChild(root_0, VARIABLE14_tree);

             retval.ret.setText((VARIABLE14!=null?VARIABLE14.getText():null)); 

            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "variable"

    public static class indexer_return extends ParserRuleReturnScope {
        public IndexerElement ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "indexer"
    // spina.g:81:1: indexer returns [IndexerElement ret] : VAR1= VARIABLE '<' VAR2= VARIABLE '>' ;
    public final spinaParser.indexer_return indexer() throws RecognitionException {
        spinaParser.indexer_return retval = new spinaParser.indexer_return();
        retval.start = input.LT(1);

        Object root_0 = null;

        Token VAR1=null;
        Token VAR2=null;
        Token char_literal15=null;
        Token char_literal16=null;

        Object VAR1_tree=null;
        Object VAR2_tree=null;
        Object char_literal15_tree=null;
        Object char_literal16_tree=null;


          retval.ret = new IndexerElement();

        try {
            // spina.g:85:3: (VAR1= VARIABLE '<' VAR2= VARIABLE '>' )
            // spina.g:85:5: VAR1= VARIABLE '<' VAR2= VARIABLE '>'
            {
            root_0 = (Object)adaptor.nil();

            VAR1=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_indexer402); 
            VAR1_tree = (Object)adaptor.create(VAR1);
            adaptor.addChild(root_0, VAR1_tree);

             retval.ret.setText((VAR1!=null?VAR1.getText():null)); 
            char_literal15=(Token)match(input,ANG_BRACKET_LEFT,FOLLOW_ANG_BRACKET_LEFT_in_indexer408); 
            char_literal15_tree = (Object)adaptor.create(char_literal15);
            adaptor.addChild(root_0, char_literal15_tree);

            VAR2=(Token)match(input,VARIABLE,FOLLOW_VARIABLE_in_indexer414); 
            VAR2_tree = (Object)adaptor.create(VAR2);
            adaptor.addChild(root_0, VAR2_tree);

             retval.ret.setIter((VAR2!=null?VAR2.getText():null)); 
            char_literal16=(Token)match(input,ANG_BRACKET_RIGHT,FOLLOW_ANG_BRACKET_RIGHT_in_indexer420); 
            char_literal16_tree = (Object)adaptor.create(char_literal16);
            adaptor.addChild(root_0, char_literal16_tree);


            }

            retval.stop = input.LT(-1);

            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
        finally {
        }
        return retval;
    }
    // $ANTLR end "indexer"

    public static class literal_return extends ParserRuleReturnScope {
        public Element ret;
        Object tree;
        public Object getTree() { return tree; }
    };

    // $ANTLR start "literal"
    // spina.g:90:1: literal returns [Element ret] : ( scalar_literal | matrix_literal ) ;
    public final spinaParser.literal_return literal() throws RecognitionException {
        spinaParser.literal_return retval = new spinaParser.literal_return();
        retval.start = input.LT(1);

        Object root_0 = null;
